$Id: History,v 1.18 2002-03-08 13:43:26 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm1 History file
                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
08-03-02 mma (testem1-V04-00-01)
- PhysicsList: unifomisation of the setG(E)Cut commands
     
06-02-02 mma (testem1-V04-00-00)
     
06-12-01  mma
- In PrimaryGeneratorAction, possibility to fix the vertex at front face, 
  and to randomize the beam spot.
- command /gun/rndm in PrimaryGeneratorMessenger
- similar functionality in geant3: gukine.F
- change output precision in RunAction (+uglast.F)
     
29-11-01  mma (testem1-V03-02-02) 
- EventAction: DrawTrack "none"
- small change in vis.mac
- suppression of the rndm commands, now managed by G4RunManager: 
  --> RunAction, EventAction. suppression of RunActionMessenger
    
31-10-01 mma (testem1-V03-02-01)
- PhysicsListMessenger: commands CutE, CutG, CutP avaiblable in PreInit
- in all macros: set cuts before run/initialize
       
26-10-01 mma (testem1-V03-02-00)
- mods in TestEm1.cc: the initialisation and vis initialisation are
  not done gy default. --> inserted /run/initialize in all macros.
- To get visualisation: > /control/execute vis.mac  (new vis commands)
- 80 columns everywhere  
     
19-10-01 Steve O'Neale (examples-V03-02-00)
- Update reference output

27-03-01 mma (testem1-V03-00-05)
- set cppflag G4NOHIST = true in gnumakefile
	  	       