@@ -1,4 +1,4 @@
-$Id: History,v 1.18 2002-03-08 13:43:26 maire Exp $
+$Id: History,v 1.19 2002-05-31 17:10:34 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+31-05-02 mma (testem1-V04-00-02)
+-old histograming package clhep/hist replaced by AIDA 2.2/anaphe. See README
      
 08-03-02 mma (testem1-V04-00-01)
 - PhysicsList: unifomisation of the setG(E)Cut commands
